--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,12 @@
 // app global css in SCSS form
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap%27");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
 
 .normal-card {
   width: 100%;
